the app is working, about to deploy

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,17 @@
 <h1>This is index page</h1>
-<% @lists.each do |list| %>
-<%= link_to list.name, show_path(list) %>
-<%# da uma olhada  %>
-<% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://image.pollinations.ai/prompt/wagon-movie-list);">
+  <div class="container">
+  </div>
+</div>
+<div class="container mt-3">
+  <div class="cards">
+    <% @lists.each do |list| %>
+      <%= link_to list_path(list) do  %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://image.pollinations.ai/prompt/<%= list.name %>-movie);">
+          <%= list.name %>
+        </div>
+      <% end %>
+    <% end %>
+    <%= link_to "new lists", new_list_path %>
+  </div>
+</div>
