--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,6 @@
+<h1>Create a list!</h1>
 <%= simple_form_for @list do |f| %>
   <%= f.input :name %>
   <%= f.submit "Create List", class: "btn btn-primary" %>
+  <%= link_to "lists", lists_path%>
 <% end %>
