--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,5 @@
 <h1>This is show page</h1>
-<%= @list.name %>
+ <h1><%= @list.name %></h1>
+  <%= link_to "back to lists", lists_path %>
 <%# <%= @movies.title%>
+<%# #arruma aqui %>
