--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -2,5 +2,6 @@
 <%= simple_form_for @list do |f| %>
   <%= f.input :name %>
   <%= f.submit "Create List", class: "btn btn-primary" %>
+  <%= f.input :photo, as: :file %>
   <%= link_to "lists", lists_path%>
 <% end %>
