--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,8 +1,7 @@
-<h1>This is index page</h1>
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://image.pollinations.ai/prompt/wagon-movie-list);">
-  <div class="container">
+
+<div class="banner" style="background-image: url(<%= asset_path("happy-gilmore-carl-weathers-adam-sandler.avif") %>)">
+  <h1>Welcome to Watch list</h1>
   </div>
-</div>
 <div class="container mt-3">
   <div class="cards">
     <% @lists.each do |list| %>
