--- a/app/assets/stylesheets/pages/_cards.scss
+++ b/app/assets/stylesheets/pages/_cards.scss
@@ -1,9 +1,45 @@
+.card-container{
+
+  h2 {
+  margin-left: 4%;
+  margin-bottom:35px;
+  color:#ffac0b;
+  font-size: 40px;
+  font-weight: 500;
+}
+
 .cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #0d2d83;
+    border-radius: 20px;
+
+  .card-category {
+    background-color: #fff1d6;
+    color: #252ab6;
+    height: 200px;
+    width: 80%;
+    display: flex;
+    justify-content: start;
+    padding-left: 40px;
+    padding-top: 20px;
+    align-items: baseline;
+    border-radius: 55px;
+    font-size: 30px;
+    margin-left: 10%;
+  }
 
   a {
+    border-color: #7a0202;
+    color: #343434;
+    font-size: 30px;
+    font-weight: 400;
     text-decoration: none;
   }
+
+}
 }
