--- a/app/assets/stylesheets/pages/_cards.scss
+++ b/app/assets/stylesheets/pages/_cards.scss
@@ -1,5 +1,11 @@
 .card-container{
 
+  background-color:#0d2d83;
+
+  a {
+  text-decoration: none;
+  }
+
   h2 {
   margin-left: 4%;
   margin-bottom:35px;
@@ -8,38 +14,50 @@
   font-weight: 500;
 }
 
-.cards {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 20px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #0d2d83;
-    border-radius: 20px;
+// .row {
+//     display: grid;
+//     grid-template-columns: 1fr;
+//     grid-gap: 20px;
+//     width: 100%;
+//     margin-left: auto;
+//     margin-right: auto;
+//     background-color: #0d2d83;
+//     border-radius: 20px;
+// }
 
   .card-category {
     background-color: #fff1d6;
     color: #252ab6;
-    height: 200px;
-    width: 80%;
     display: flex;
+    flex-direction: column;
     justify-content: start;
-    padding-left: 40px;
-    padding-top: 20px;
-    align-items: baseline;
     border-radius: 55px;
     font-size: 30px;
-    margin-left: 10%;
-  }
+    transition: transform 1.3s ease;
 
-  a {
-    border-color: #7a0202;
-    color: #343434;
+  h2 {
+    color: #0d2d83;
     font-size: 30px;
     font-weight: 400;
     text-decoration: none;
-  }
+    }
 
-}
+    p {
+    color: #203a80;
+    font-size: 20px;
+    font-weight: 300;
+    margin-left: 4%;
+    }
+
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+      background-color: #001348;
+
+      h2, p {
+        color:#ffac0b
+      }
+
+    }
+  }
 }
