--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -27,6 +27,10 @@
   <%# list of technologies that you use with icons %>
   <div class="technologies px-4 py-2">
      <h2>Technologies</h2>
+     <i class="fa-brands fa-html5"></i>
+     <i class="fa-brands fa-css"></i>
+     <i class="fa-brands fa-square-figma"></i>
+
   </div>
 
   <%# Projects %>
