--- a/app/assets/stylesheets/pages/_technologies.scss
+++ b/app/assets/stylesheets/pages/_technologies.scss
@@ -7,4 +7,14 @@
     font-size: 40px;
     font-weight: 500;
     }
+
+  .technologies-container{
+    background-color: #fff1d6;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border-radius: 55px;
+    padding: 10%;
+    font-size: 40px;
+  }
 }
