added contact section

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -65,14 +65,20 @@
   </div> %>
   <%# create a new root to page that shows what you do for fun %>
   <%# contact %>
-  <div class="contact px-4 py-2">
-    <div class="contact-section">
-      <p>Get in contact</p>
-      <p>guilherme@gmail.com</p>
-    </div>
-    <div class="icons">
-      <i class="devicon-linkedin-plain"></i>
-      <i class="devicon-github-original"></i>
+  <div class="contact">
+    <div class="container-fluid">
+      <div class="p-2-5 d-flex justify-content-between align-items-center">
+        <div class="contact-section flex-wrap">
+          <div class="d-flex gap-2">
+            <p>Get in contact</p>
+            <a class="mail" href="mailto:kenjisakamoto0506@gmail.com"> kenjisakamoto0506@gmail.com</a>
+          </div>
+        </div>
+        <div class="icons">
+          <i class="devicon-linkedin-plain"></i>
+          <i class="devicon-github-original"></i>
+        </div>
+      </div>
     </div>
   </div>
 </div>
