--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -1,8 +1,24 @@
 .contact{
     background-color: #0d2d83;
     color: whitesmoke;
+    font-size: 18px;
+    font-weight: 100;
+
+    i {
+      font-size: 36px;
+    }
+
+
+    .p-2-5 {
+      padding: 0.75rem;
+    }
 
   .contact-section{
-    // work on this one
+    .mail {
+      color: whitesmoke;
+      text-decoration: none;
+      font-style: italic;
+      font-weight: 400;
+    }
   }
 }
