--- a/app/assets/stylesheets/pages/_introduction.scss
+++ b/app/assets/stylesheets/pages/_introduction.scss
@@ -1,13 +1,13 @@
 .introduction-section {
-  background-color: #0d2d83;
-  color: #ffc65a;
+  background-color: #F6F6F6;
+  color: #2E2E2E;
   position: relative;
   overflow: hidden;
 
   .text-box {
     width: 100%;
     padding: 20px;
-    color: #ffac0b;
+    color: #2E2E2E;
 
     h2 {
       font-size: 38px;
