--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,9 +12,9 @@ $font-size-base:         1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    $white;
 $success:    $green;
-$info:       $yellow;
+$info:       $white;
 $danger:     $red;
 $warning:    $orange;
 
