--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,9 +1,9 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
+$white: #F6F6F6;
+$black: #2E2E2E;
+$red: #C60000;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
