--- a/app/assets/stylesheets/pages/_cards.scss
+++ b/app/assets/stylesheets/pages/_cards.scss
@@ -1,6 +1,6 @@
 .card-container{
 
-  background-color:#0d2d83;
+  background-color: $white;
 
   a {
   text-decoration: none;
@@ -8,8 +8,8 @@
 
   h2 {
   margin-left: 4%;
-  margin-bottom:35px;
-  color:#ffac0b;
+  margin-bottom:1%;
+  color:$black;
   font-size: 40px;
   font-weight: 500;
 }
@@ -26,36 +26,57 @@
 // }
 
   .card-category {
-    background-color: #fff1d6;
-    color: #252ab6;
+    background-color: $white;
+    color: $black;
     display: flex;
     flex-direction: column;
     justify-content: start;
     border-radius: 55px;
     font-size: 30px;
     transition: transform 1.3s ease;
+    filter: drop-shadow(1px 1px 1px rgb(182, 182, 182));
 
-  h2 {
-    color: #0d2d83;
+    .role-text {
+    padding-top: 5%;
+    }
+
+    img {
+      max-width: 100%;
+      padding-left: 5%;
+    }
+
+    h2 {
+    color: $black;
     font-size: 30px;
     font-weight: 400;
-    text-decoration: none;
+    }
+
+    h3 {
+      margin-left: 4%;
     }
 
     p {
-    color: #203a80;
+    color: $black;
     font-size: 20px;
     font-weight: 300;
     margin-left: 4%;
     }
 
+    i {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 10%;
+    font-size: 40px;
+    }
+
     &:hover {
       transform: translateY(-5px);
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
-      background-color: #001348;
+      box-shadow: 0 6px 15px #242424;
+      background-color: #242424;
 
-      h2, p {
-        color:#ffac0b
+      h2, h3, p {
+        color: $white;
       }
 
     }
