--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -1,11 +1,17 @@
 .contact{
-    background-color: #0d2d83;
+    background-color: #191b81;
     color: whitesmoke;
     font-size: 18px;
     font-weight: 100;
 
+     a {
+     text-decoration: none;
+     font-style: italic;
+     }
+
     i {
       font-size: 36px;
+      text-decoration: none;
     }
 
 
